--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-pygments: true
+highlighter: pygments
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -27,8 +27,8 @@ author :
 #
 production_url : http://username.github.io
 
-url: "http://dybwall1234.github.io"
-baseurl: dybwall1234.github.com
+gems: ["jekyll-sitemap"]
+
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
@@ -94,13 +94,17 @@ JB :
       num_posts: 5
       width: 580
       colorscheme: light
+    duoshuo :
+      short_name : jekyllbootstrap
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : google 
+    provider : google
+    gauges :
+        site_id : 'SITE ID'
     google : 
         tracking_id : 'UA-123-12'
     getclicky :
